--- a/calculadoradeprecos@35.193.233.181/index.html
+++ b/calculadoradeprecos@35.193.233.181/index.html
@@ -2,29 +2,21 @@
 <html lang="en">
 
 <head>
-  
   <meta charset="utf-8">
-  <title>Calculadora de preços de produtos para lojistas</title>
+  <title>Calculadora de preços para lojistas</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-8336386659199680",
-    enable_page_level_ads: true
-  });
-</script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-</head>
+<link href="styles.848aa2f4efb999df333c.bundle.css" rel="stylesheet"/></head>
 
 <body>
   <app-root></app-root>
-</body>
+<script type="text/javascript" src="inline.269d05f03b648d3d8a16.bundle.js"></script><script type="text/javascript" src="polyfills.652ef966ac5414a711ed.bundle.js"></script><script type="text/javascript" src="vendor.e029977dc9dfb2b345d5.bundle.js"></script><script type="text/javascript" src="main.bde993cde634e0fe8642.bundle.js"></script></body>
 
 </html>
